--- a/index.css
+++ b/index.css
@@ -1,11 +1,17 @@
 body{
     background-image: url("./images/leaf_background.jfif");
-    background-size: 100%;
+    background-size: 100% auto;
     background-attachment: fixed;
     box-sizing: border-box;
-    width: 75%;
-    max-width: 1080px;
+    width: 80%;
+    max-width: 2000px;
     margin: 0px auto;
+    text-align: center;
+}
+.mobile .mobile_heading{
+    height: 0;
+    width: 0;
+    font-size: 0;
 }
 .main_img_container{
     margin: 50px 0;
@@ -53,10 +59,12 @@ body{
 
 /* Slider Css*/
 .carousal-container{
-    padding: 50px 0px;
-    width: 1080px;
-    height: 550px;
+    width: 100%;
+    max-width: 2000px;
     margin: 0px auto;
+    text-align: center;
+    padding: 50px 0px;
+    height: 550px;
 }
 .carousel {
     background: unset;
@@ -64,7 +72,7 @@ body{
 }
   
 .carousel-cell {
-    width: 40%;
+    width: 50%;
     height: 550px;
     padding: 30px;
     margin-right: 30px;
@@ -80,4 +88,72 @@ body{
     height: 200px;
     width: 200px;
     border-radius: 50%;
+}
+
+@media screen and (max-width:980px) and (min-width:375px){
+    .carousel-cell{
+        width: 80%;
+    }
+    .main_img_container{
+        margin: 5px 0;
+    }
+    .navbar_img{
+        height: 0px;
+        width: 0px;
+    }
+    .navbar .collapse .nav-item .form-inline{
+        height: 0px;
+        width: 0px;
+        font-size: 0px;
+        color: black;
+    }
+    .mobile_heading{
+        margin-top: 30px;
+        margin-bottom: 30px;
+        color: white;
+    }
+    .mobile .mobile_heading{
+        height: 100px;
+        width: 100%;
+        font-size: 50px;
+    }
+}
+@media screen and (max-width:376px){
+    body{
+        width: 90%;
+    }
+    .carousel-cell{
+        width: 100%;
+        padding: 10px;
+    }
+    .main_img_container{
+        height: 0;
+        width: 0;
+    }
+    .navbar_img{
+        height: 0px;
+        width: 0px;
+    }
+    .d-flex{
+        display: block !important;
+    }
+    .flex-item{
+        width: 100%;
+        margin: 20px 0px;
+    }
+    .navbar{
+        height: 0;
+        width: 0;
+        font-size: 0;
+    }
+    .mobile_heading{
+        margin-top: 30px;
+        margin-bottom: 0px;
+        color: white;
+    }
+    .mobile .mobile_heading{
+        height: 100px;
+        width: 100%;
+        font-size: 50px;
+    }
 }
