--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body{
 }
   
 .carousel-cell {
-    width: 50%;
+    width: 45%;
     height: 550px;
     padding: 30px;
     margin-right: 30px;
@@ -88,6 +88,22 @@ body{
     height: 200px;
     width: 200px;
     border-radius: 50%;
+}
+
+footer{
+    width: 100%;
+    padding: 30px;
+    background-color: black;
+    text-decoration: none;
+}
+
+.foot a{
+    color: rgb(109, 109, 109);
+}
+
+.foot a:hover{
+    color: white;
+    text-decoration: none;
 }
 
 @media screen and (max-width:980px) and (min-width:375px){
