--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ footer{
     text-decoration: none;
 }
 
-@media screen and (max-width:980px) and (min-width:375px){
+@media screen and (max-width:980px) and (min-width:411px){
     .carousel-cell{
         width: 80%;
     }
@@ -134,7 +134,7 @@ footer{
         font-size: 50px;
     }
 }
-@media screen and (max-width:376px){
+@media screen and (max-width:412px){
     body{
         width: 90%;
     }
@@ -143,8 +143,7 @@ footer{
         padding: 10px;
     }
     .main_img_container{
-        height: 0;
-        width: 0;
+        width: 100%;
     }
     .navbar_img{
         height: 0px;
