--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ footer{
     text-decoration: none;
 }
 
-@media screen and (max-width:1100px) and (min-width:414px){
+@media screen and (max-width:1200px) and (min-width:414px){
     .carousel-cell{
         width: 80%;
     }
@@ -114,7 +114,7 @@ footer{
         display: block !important;
     }
     .flex-item{
-        width: 100%;
+        width: 100% !important;
         margin: 20px 0px;
     }
     .main_img_container{
