--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ body{
     width: 45%;
     height: 550px;
     padding: 30px;
-    margin-right: 30px;
+    margin-right: 10px;
     background: rgba(0, 0, 0, 0.781);
     border-radius: 5px;
     text-align: center;
@@ -108,7 +108,9 @@ footer{
 
 @media screen and (max-width:1200px) and (min-width:414px){
     .carousel-cell{
-        width: 80%;
+        width: 100%;
+        height: auto;
+        overflow:scroll;
     }
     .d-flex{
         display: block !important;
@@ -147,7 +149,7 @@ footer{
     }
     .carousel-cell{
         width: 100%;
-        padding: 10px;
+        height: 600px;
     }
     .main_img_container{
         width: 100%;
