--- a/index.css
+++ b/index.css
@@ -117,6 +117,7 @@ footer{
     }
     .flex-item{
         width: 100% !important;
+        margin: 10px 0px;
     }
     .main_img_container{
         margin: 5px 0;
@@ -162,6 +163,7 @@ footer{
     }
     .flex-item{
         width: 100%;
+        margin: 10px 0px;
     }
     .navbar{
         height: 0;
